--- a/Promessometro.Aplicacao/Promessometro.Aplicacao.csproj
+++ b/Promessometro.Aplicacao/Promessometro.Aplicacao.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Effortless.Net.Encryption" Version="4.1.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
   </ItemGroup>
 
