Adicionando imagens de vereadores Ajustando nome CaminhoImagem da entidade Vereadores

--- a/Promessometro.Aplicacao/Promessometro.Aplicacao.csproj
+++ b/Promessometro.Aplicacao/Promessometro.Aplicacao.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Effortless.Net.Encryption" Version="4.1.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
