--- a/Promessometro.Apresentacao.Api/Promessometro.Apresentacao.Api.csproj
+++ b/Promessometro.Apresentacao.Api/Promessometro.Apresentacao.Api.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Promessometro.Infraestrutura\Promessometro.Infraestrutura.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
