--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,19 @@
 /.vs/ProjectEvaluation
 /Promessometro.Apresentacao.Api/obj
 /Promessometro.Infraestrutura/obj
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.dll
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.exe
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.pdb
+/Promessometro.Apresentacao.Api.Docker/obj/Container/ContainerId.cache
+/Promessometro.Apresentacao.Api.Docker/obj/Container/ContainerName.cache
+/Promessometro.Apresentacao.Api.Docker/obj/Container/ContainerRunContext.cache
+/Promessometro.Apresentacao.Api.Docker/obj/Container/ImageId.cache
+/Promessometro.Apresentacao.Api.Docker/obj/Container/LaunchedImageId.cache
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/apphost.exe
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.AssemblyInfo.cs
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.AssemblyInfoInputs.cache
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.dll
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.pdb
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.sourcelink.json
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/ref/Promessometro.Apresentacao.Api.Docker.dll
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/refint/Promessometro.Apresentacao.Api.Docker.dll
