--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,22 @@
 /Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.sourcelink.json
 /Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/ref/Promessometro.Apresentacao.Api.Docker.dll
 /Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/refint/Promessometro.Apresentacao.Api.Docker.dll
+/Promessometro.Aplicacao/bin/Debug/net8.0/Promessometro.Aplicacao.dll
+/Promessometro.Aplicacao/bin/Debug/net8.0/Promessometro.Aplicacao.pdb
+/Promessometro.Aplicacao/bin/Debug/net8.0/Promessometro.Dominio.dll
+/Promessometro.Aplicacao/bin/Debug/net8.0/Promessometro.Dominio.pdb
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Aplicacao.dll
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Aplicacao.pdb
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Dominio.dll
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Dominio.pdb
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Infraestrutura.dll
+/Promessometro.Apresentacao.Api.Docker/bin/Debug/net8.0/Promessometro.Infraestrutura.pdb
+/Promessometro.Apresentacao.Api.Docker/obj/Debug/net8.0/Promessometro.Apresentacao.Api.Docker.csproj.AssemblyReference.cache
+/Promessometro.Dominio/bin/Debug/net8.0/Promessometro.Dominio.dll
+/Promessometro.Dominio/bin/Debug/net8.0/Promessometro.Dominio.pdb
+/Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Aplicacao.dll
+/Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Aplicacao.pdb
+/Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Dominio.dll
+/Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Dominio.pdb
+/Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Infraestrutura.dll
+/Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Infraestrutura.pdb
