Criação do projeto que irá realiar o web scraping no site da camara para armazenar os requerimentos

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@
 /Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Dominio.pdb
 /Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Infraestrutura.dll
 /Promessometro.Infraestrutura/bin/Debug/net8.0/Promessometro.Infraestrutura.pdb
+/Promessometro.Servico.Requerimentos/obj
+/Promessometro.WebScraping/obj
