--- a/Promessometro.Servico.Requerimentos/Promessometro.Servico.Requerimentos.csproj
+++ b/Promessometro.Servico.Requerimentos/Promessometro.Servico.Requerimentos.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Promessometro.Aplicacao\Promessometro.Aplicacao.csproj" />
+    <ProjectReference Include="..\Promessometro.Infraestrutura\Promessometro.Infraestrutura.csproj" />
+    <ProjectReference Include="..\Promessometro.WebScraping\Promessometro.WebScraping.csproj" />
+  </ItemGroup>
 </Project>
