--- a/Promessometro.Servico.Requerimentos/appsettings.json
+++ b/Promessometro.Servico.Requerimentos/appsettings.json
@@ -1,8 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Host=host.docker.internal;Port=5432;Database=Promessometro;Username=postgres;Password=Demo@2019"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "WebScrappingSettings": {
+    "Url": "https://camarasempapel.camarasjc.sp.gov.br/spl/sessoes.aspx"
   }
 }
