--- a/Promessometro.Apresentacao.Api.Docker/Promessometro.Apresentacao.Api.Docker.csproj
+++ b/Promessometro.Apresentacao.Api.Docker/Promessometro.Apresentacao.Api.Docker.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
@@ -21,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Promessometro.Aplicacao\Promessometro.Aplicacao.csproj" />
     <ProjectReference Include="..\Promessometro.Infraestrutura\Promessometro.Infraestrutura.csproj" />
+    <ProjectReference Include="..\Promessometro.WebScraping\Promessometro.WebScraping.csproj" />
   </ItemGroup>
 
 </Project>
