--- a/Promessometro.WebScraping/Promessometro.WebScraping.csproj
+++ b/Promessometro.WebScraping/Promessometro.WebScraping.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+    <PackageReference Include="PdfPig" Version="0.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Promessometro.Aplicacao\Promessometro.Aplicacao.csproj" />
   </ItemGroup>
 
