Desenvolvimento do procedimento que le os requerimentos do site da camara e insere no banco via web scraping

--- a/Promessometro.Servico.Requerimentos/appsettings.json
+++ b/Promessometro.Servico.Requerimentos/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "WebScrappingSettings": {
-    "Url": "https://camarasempapel.camarasjc.sp.gov.br/spl/sessoes.aspx"
+    "Url": "https://camarasempapel.camarasjc.sp.gov.br/spl/sessoes.aspx",
+    "PeriodoDeBuscaEmDias": 365
   }
 }
