--- a/Promessometro.Aplicacao/Promessometro.Aplicacao.csproj
+++ b/Promessometro.Aplicacao/Promessometro.Aplicacao.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Promessometro.Dominio\Promessometro.Dominio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resolvers\" />
+  </ItemGroup>
+
 </Project>
